--- a/zmap.html
+++ b/zmap.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zenrin Maps Route Optimization</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="zstyle.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
     "></script>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="zscript.js"></script>
 </body>
 
 </html>
