update html and css

--- a/zmap.html
+++ b/zmap.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <h1>歩行者ルート検索2.0</h1>
+    <h1>自動車ルート検索2.0(最適巡回考慮)</h1>
 
     <div id="ZMap">
         <div id="info">
             <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-left align-items-center">
                     時間 ➡
                     <span class="badge text-bg-primary rounded-pill" id="time"></span>
                 </li>
